pkg/cluster/internal/create/actions/createworker/files/gcp-compute-persistent-disk-csi-driver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csi-gce-pd-controller
  namespace: gce-pd-csi-driver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcp-compute-persistent-disk-csi-driver
  template:
    metadata:
      labels:
        app: gcp-compute-persistent-disk-csi-driver
    spec:
      containers:
      - args:
        - --v=5
        - --csi-address=/csi/csi.sock
        - --feature-gates=Topology=true
        - --http-endpoint=:22011
        - --leader-election-namespace=$(PDCSI_NAMESPACE)
        - --timeout=250s
        - --extra-create-metadata
        - --leader-election
        - --default-fstype=ext4
        - --controller-publish-readonly=true
        image: k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz/leader-election
            port: http-endpoint
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 10
        name: csi-provisioner
        ports:
        - containerPort: 22011
          name: http-endpoint
          protocol: TCP
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      - args:
        - --v=5
        - --csi-address=/csi/csi.sock
        - --http-endpoint=:22012
        - --leader-election
        - --leader-election-namespace=$(PDCSI_NAMESPACE)
        - --timeout=250s
        image: k8s.gcr.io/sig-storage/csi-attacher:v3.4.0
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz/leader-election
            port: http-endpoint
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 10
        name: csi-attacher
        ports:
        - containerPort: 22012
          name: http-endpoint
          protocol: TCP
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      - args:
        - --v=5
        - --csi-address=/csi/csi.sock
        - --http-endpoint=:22013
        - --leader-election
        - --leader-election-namespace=$(PDCSI_NAMESPACE)
        - --handle-volume-inuse-error=false
        image: k8s.gcr.io/sig-storage/csi-resizer:v1.4.0
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz/leader-election
            port: http-endpoint
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 10
        name: csi-resizer
        ports:
        - containerPort: 22013
          name: http-endpoint
          protocol: TCP
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      - args:
        - --v=5
        - --csi-address=/csi/csi.sock
        - --metrics-address=:22014
        - --leader-election
        - --leader-election-namespace=$(PDCSI_NAMESPACE)
        - --timeout=300s
        image: k8s.gcr.io/sig-storage/csi-snapshotter:v4.0.1
        name: csi-snapshotter
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      - args:
        - --v=5
        - --endpoint=unix:/csi/csi.sock
        image: k8s.gcr.io/cloud-provider-gcp/gcp-compute-persistent-disk-csi-driver:v1.7.1
        name: gce-pd-driver
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
        - mountPath: /etc/cloud-sa
          name: cloud-sa-volume
          readOnly: true
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: csi-gce-pd-controller
      serviceAccountName: csi-gce-pd-controller-sa
      volumes:
      - emptyDir: {}
        name: socket-dir
      - name: cloud-sa-volume
        secret:
          secretName: cloud-sa
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: csi-gce-pd-node
  namespace: gce-pd-csi-driver
spec:
  selector:
    matchLabels:
      app: gcp-compute-persistent-disk-csi-driver
  template:
    metadata:
      labels:
        app: gcp-compute-persistent-disk-csi-driver
    spec:
      containers:
      - args:
        - --v=5
        - --csi-address=/csi/csi.sock
        - --kubelet-registration-path=/var/lib/kubelet/plugins/pd.csi.storage.gke.io/csi.sock
        image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.5.0
        name: csi-driver-registrar
        volumeMounts:
        - mountPath: /csi
          name: plugin-dir
        - mountPath: /registration
          name: registration-dir
      - args:
        - --v=5
        - --endpoint=unix:/csi/csi.sock
        - --run-controller-service=false
        image: k8s.gcr.io/cloud-provider-gcp/gcp-compute-persistent-disk-csi-driver:v1.7.1
        name: gce-pd-driver
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /var/lib/kubelet
          mountPropagation: Bidirectional
          name: kubelet-dir
        - mountPath: /csi
          name: plugin-dir
        - mountPath: /dev
          name: device-dir
        - mountPath: /etc/udev
          name: udev-rules-etc
        - mountPath: /lib/udev
          name: udev-rules-lib
        - mountPath: /run/udev
          name: udev-socket
        - mountPath: /sys
          name: sys
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: csi-gce-pd-node
      serviceAccountName: csi-gce-pd-node-sa
      tolerations:
      - operator: Exists
      volumes:
      - hostPath:
          path: /var/lib/kubelet/plugins_registry/
          type: Directory
        name: registration-dir
      - hostPath:
          path: /var/lib/kubelet
          type: Directory
        name: kubelet-dir
      - hostPath:
          path: /var/lib/kubelet/plugins/pd.csi.storage.gke.io/
          type: DirectoryOrCreate
        name: plugin-dir
      - hostPath:
          path: /dev
          type: Directory
        name: device-dir
      - hostPath:
          path: /etc/udev
          type: Directory
        name: udev-rules-etc
      - hostPath:
          path: /lib/udev
          type: Directory
        name: udev-rules-lib
      - hostPath:
          path: /run/udev
          type: Directory
        name: udev-socket
      - hostPath:
          path: /sys
          type: Directory
        name: sys
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: csi-gce-pd-node-win
  namespace: gce-pd-csi-driver
spec:
  selector:
    matchLabels:
      app: gcp-compute-persistent-disk-csi-driver
  template:
    metadata:
      labels:
        app: gcp-compute-persistent-disk-csi-driver
    spec:
      containers:
      - args:
        - --v=5
        - --csi-address=unix://C:\\csi\\csi.sock
        - --kubelet-registration-path=C:\\var\\lib\\kubelet\\plugins\\pd.csi.storage.gke.io\\csi.sock
        image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.5.0
        name: csi-driver-registrar
        volumeMounts:
        - mountPath: /csi
          name: plugin-dir
        - mountPath: /registration
          name: registration-dir
      - args:
        - --v=5
        - --endpoint=unix:/csi/csi.sock
        - --run-controller-service=false
        image: k8s.gcr.io/cloud-provider-gcp/gcp-compute-persistent-disk-csi-driver:v1.7.1
        name: gce-pd-driver
        volumeMounts:
        - mountPath: C:\var\lib\kubelet
          mountPropagation: None
          name: kubelet-dir
        - mountPath: C:\csi
          name: plugin-dir
        - mountPath: \\.\pipe\csi-proxy-volume-v1
          name: csi-proxy-volume-v1
        - mountPath: \\.\pipe\csi-proxy-filesystem-v1
          name: csi-proxy-filesystem-v1
        - mountPath: \\.\pipe\csi-proxy-disk-v1
          name: csi-proxy-disk-v1
        - mountPath: \\.\pipe\csi-proxy-volume-v1beta1
          name: csi-proxy-volume-v1beta1
        - mountPath: \\.\pipe\csi-proxy-filesystem-v1beta1
          name: csi-proxy-filesystem-v1beta1
        - mountPath: \\.\pipe\csi-proxy-disk-v1beta2
          name: csi-proxy-disk-v1beta2
      nodeSelector:
        kubernetes.io/os: windows
      priorityClassName: csi-gce-pd-node
      serviceAccountName: csi-gce-pd-node-sa-win
      tolerations:
      - operator: Exists
      volumes:
      - hostPath:
          path: \\.\pipe\csi-proxy-disk-v1
          type: ""
        name: csi-proxy-disk-v1
      - hostPath:
          path: \\.\pipe\csi-proxy-volume-v1
          type: ""
        name: csi-proxy-volume-v1
      - hostPath:
          path: \\.\pipe\csi-proxy-filesystem-v1
          type: ""
        name: csi-proxy-filesystem-v1
      - hostPath:
          path: \\.\pipe\csi-proxy-disk-v1beta2
          type: ""
        name: csi-proxy-disk-v1beta2
      - hostPath:
          path: \\.\pipe\csi-proxy-volume-v1beta1
          type: ""
        name: csi-proxy-volume-v1beta1
      - hostPath:
          path: \\.\pipe\csi-proxy-filesystem-v1beta1
          type: ""
        name: csi-proxy-filesystem-v1beta1
      - hostPath:
          path: \var\lib\kubelet\plugins_registry
          type: Directory
        name: registration-dir
      - hostPath:
          path: \var\lib\kubelet
          type: Directory
        name: kubelet-dir
      - hostPath:
          path: \var\lib\kubelet\plugins\pd.csi.storage.gke.io
          type: DirectoryOrCreate
        name: plugin-dir
