pkg/cluster/internal/create/actions/createworker/files/calico-metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calico-node-metrics
  namespace: calico-system
  labels:
    k8s-app: calico-node
spec:
  selector:
    k8s-app: calico-node
  ports:
    - name: metrics-port
      port: 9191
      targetPort: 9191
---
apiVersion: v1
kind: Service
metadata:
  name: calico-typha-metrics
  namespace: calico-system
  labels:
    k8s-app: calico-typha
spec:
  selector:
    k8s-app: calico-typha
  ports:
    - name: metrics-port
      port: 9093
      targetPort: 9093
