pkg/cluster/internal/create/actions/createworker/files/allow-capa-egress-imds_gnetpol.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-traffic-to-aws-imds-capa
spec:
  egress:
  - action: Allow
    destination:
      nets:
      - 169.254.169.254/32
    protocol: TCP
  order: 0
  selector: cluster.x-k8s.io/provider == 'infrastructure-aws'
  types:
  - Egress
